fixed padding issue on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,11 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+html, body {
   overflow-x: hidden  ;
+
 }
 
 /* a {
